# scs-cmake-buildsystem

./: .gitignore  CMakeLists.txt  LICENSE  README.md
